<resources>
    <string name="app_name">KantinKorperasiITDel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="password">Password</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="belum_punya_akun_daftar_di_sini"><u>Belum punya akun? Daftar di sini!</u></string>
    <string name="sudah_punya_akun_login_di_sini"><u>Sudah punya akun? Login di sini!</u></string>
</resources>